# Nested-Papercrafts-for-Anatomical-and-Biological-Edutainment

./: .gitignore  .gitmodules  README.md  requirements.txt
boolean/: boolean_interface.py
boolean/src/boolean/: CMakeLists.txt
boolean/src/boolean/boolean/: CMakeLists.txt  boolean.cpp  boolean.h
meshes/: hipB.stl  inner_intersection_box.stl  inner_mesh.stl  mid_mesh.off  mid_mesh.stl  outer_complex_mesh.stl  outer_mesh.off  outer_mesh.stl
mim/: CMakeLists.txt  mesh_inside.cpp  mesh_inside.h  mesh_ops.cpp  mesh_ops.h  mim.lib  mim.py
src/: C_demoCode.cpp  Makefile  binder.py  cgal_interface.py  experimental.py  hierarchicalMesh.py  imageProcessing.py  main.py  mesh.py  meshInteraction.py  meshProcessing.py  organizer.py  projectionStructure.py  projector.py  util.py
viewpointselection/: README.md  app.py  entropy.py
